--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
-  "name": "To-Do List",
-  "short_name": "To-Do",
-  "description": "Organize suas tarefas de forma simples e eficiente",
-  "start_url": "/",
+  "name": "To-Do List - Organizador de Tarefas",
+  "short_name": "To-Do List",
+  "description": "Organize suas tarefas com eficiência. App gratuito, funciona offline, design moderno e tema escuro.",
+  "start_url": "/to-do-list/",
   "display": "standalone",
   "background_color": "#1a1a2e",
   "theme_color": "#1a1a2e",
   "orientation": "portrait-primary",
-  "scope": "/",
+  "scope": "/to-do-list/",
+  "lang": "pt-BR",
+  "dir": "ltr",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
